updated at: 2019-10-20 22:40, 【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】 - ここなふぁくとりー - BOOTH

--- a/VRChat/03/1269803.html
+++ b/VRChat/03/1269803.html
@@ -6,7 +6,7 @@
       【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】 - ここなふぁくとりー - BOOTH
     </title>
     <meta name="description" content=
-    "商品名：【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】 モデルVer1.0.0　2019/05/17 公開 ↓確認用 https://hub.vroid.com/characters/5493598611611845363/models/7628983571895824457 &lt;モデル情報&gt; セラミア・シスハート(私服).vrm　Ver1.0.0 セラミア・シスハート(私服_肌干渉部分削除).vrm　Ver1.0.0 ポリゴン数：38756 マテリアル数：17 ボーン数：228 リップシンク対応 セラミア・シスハート(メイド風ワンピ).vrm　Ver1.0.0">
+    "商品名：【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】 モデルVer1.0.0　2019/05/17 公開 　　　　　　　　2019/10/20 メイドコスチュームテクスチャ変更 　　　　　　　　　　　　　 v0.7.5で再出力 ↓確認用 https://hub.vroid.com/characters/5493598611611845363/models/7628983571895824457 &lt;モデル情報&gt; セラミア・シスハート(私服).vrm　Ver1.0.0 セラミア・シスハート(私服_肌干渉部分削除).vrm　Ver1.0.0 ポリゴン数：37884">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1269803">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】 - ここなふぁくとりー - BOOTH">
     <meta name="twitter:description" content=
-    "商品名：【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】 モデルVer1.0.0　2019/05/17 公開 ↓確認用 https://hub.vroid.com/characters/5493598611611845363/models/7628983571895824457 &lt;モデル情報&gt; セラミア・シスハート(私服).vrm　Ver1.0.0 セラミア・シスハート(私服_肌干渉部分削除).vrm　Ver1.0.0 ポリゴン数：38756 マテリアル数：17 ボーン数：228 リップシンク対応 セラミア・シスハート(メイド風ワンピ).vrm　Ver1.0.0">
+    "商品名：【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】 モデルVer1.0.0　2019/05/17 公開 　　　　　　　　2019/10/20 メイドコスチュームテクスチャ変更 　　　　　　　　　　　　　 v0.7.5で再出力 ↓確認用 https://hub.vroid.com/characters/5493598611611845363/models/7628983571895824457 &lt;モデル情報&gt; セラミア・シスハート(私服).vrm　Ver1.0.0 セラミア・シスハート(私服_肌干渉部分削除).vrm　Ver1.0.0 ポリゴン数：37884">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/69b2f284-0d21-49c1-afdf-cde153f2c0a6_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】 - ここなふぁくとりー - BOOTH">
     <meta property="og:description" content=
-    "商品名：【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】 モデルVer1.0.0　2019/05/17 公開 ↓確認用 https://hub.vroid.com/characters/5493598611611845363/models/7628983571895824457 &lt;モデル情報&gt; セラミア・シスハート(私服).vrm　Ver1.0.0 セラミア・シスハート(私服_肌干渉部分削除).vrm　Ver1.0.0 ポリゴン数：38756 マテリアル数：17 ボーン数：228 リップシンク対応 セラミア・シスハート(メイド風ワンピ).vrm　Ver1.0.0">
+    "商品名：【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】 モデルVer1.0.0　2019/05/17 公開 　　　　　　　　2019/10/20 メイドコスチュームテクスチャ変更 　　　　　　　　　　　　　 v0.7.5で再出力 ↓確認用 https://hub.vroid.com/characters/5493598611611845363/models/7628983571895824457 &lt;モデル情報&gt; セラミア・シスハート(私服).vrm　Ver1.0.0 セラミア・シスハート(私服_肌干渉部分削除).vrm　Ver1.0.0 ポリゴン数：37884">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/69b2f284-0d21-49c1-afdf-cde153f2c0a6_base_resized.jpg">
     <meta property="og:url" content=
@@ -259,6 +259,36 @@
                             "【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】"
                             class="market-item-detail-item-image"
                             data-lazy=
+                            "https://booth.pximg.net/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/4dd14234-5cee-41fb-96d7-ef0ab5846b56_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt=
+                            "【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】"
+                            class="market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/6613d487-3737-42c5-99ae-041a882061b8_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt=
+                            "【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】"
+                            class="market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/c8c42b31-39f6-4d1c-b34d-dda7c8417756_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt=
+                            "【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】"
+                            class="market-item-detail-item-image"
+                            data-lazy=
                             "https://booth.pximg.net/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/b12c60ad-50dc-49f9-bfb2-94b7c2789f86_base_resized.jpg">
                           </div>
                         </div>
@@ -359,7 +389,7 @@
                             "【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/ef92c095-b878-4805-9d1d-7fb0a4addee8_base_resized.jpg">
+                            "https://booth.pximg.net/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/0f83cc60-a014-48c2-b366-32aaebcbb6e3_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -369,7 +399,7 @@
                             "【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/22fd3139-dcee-4b5f-9167-e7e9954a9a34_base_resized.jpg">
+                            "https://booth.pximg.net/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/ddd99c73-a962-4239-acef-7eb75056b9c0_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -379,37 +409,7 @@
                             "【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/6e79d99b-7f88-41ad-bcaf-6c73904cee4f_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】"
-                            class="market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/4dd14234-5cee-41fb-96d7-ef0ab5846b56_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】"
-                            class="market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/6613d487-3737-42c5-99ae-041a882061b8_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】"
-                            class="market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/c8c42b31-39f6-4d1c-b34d-dda7c8417756_base_resized.jpg">
+                            "https://booth.pximg.net/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/71131963-74e6-4aa2-a73f-ffc8d73ea858_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -418,6 +418,18 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/69b2f284-0d21-49c1-afdf-cde153f2c0a6_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/4dd14234-5cee-41fb-96d7-ef0ab5846b56_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/6613d487-3737-42c5-99ae-041a882061b8_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/c8c42b31-39f6-4d1c-b34d-dda7c8417756_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
@@ -461,27 +473,15 @@
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/ef92c095-b878-4805-9d1d-7fb0a4addee8_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/0f83cc60-a014-48c2-b366-32aaebcbb6e3_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/22fd3139-dcee-4b5f-9167-e7e9954a9a34_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/ddd99c73-a962-4239-acef-7eb75056b9c0_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/6e79d99b-7f88-41ad-bcaf-6c73904cee4f_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/4dd14234-5cee-41fb-96d7-ef0ab5846b56_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/6613d487-3737-42c5-99ae-041a882061b8_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/c8c42b31-39f6-4d1c-b34d-dda7c8417756_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/013dc726-548e-4719-9ab6-5d4b00ceeb87/i/1269803/71131963-74e6-4aa2-a73f-ffc8d73ea858_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -492,15 +492,17 @@
                           </h1>
                           <p class="autolink">
                             商品名：【VRMモデル】セラミア・シスハートVer1.0.0【第1弾】
-                            モデルVer1.0.0　2019/05/17 公開 ↓確認用
+                            モデルVer1.0.0　2019/05/17 公開
+                            　　　　　　　　2019/10/20 メイドコスチュームテクスチャ変更
+                            　　　　　　　　　　　　　 v0.7.5で再出力 ↓確認用
                             https://hub.vroid.com/characters/5493598611611845363/models/7628983571895824457
                             &lt;モデル情報&gt;
                             セラミア・シスハート(私服).vrm　Ver1.0.0
                             セラミア・シスハート(私服_肌干渉部分削除).vrm　Ver1.0.0
-                            ポリゴン数：38756 マテリアル数：17 ボーン数：228 リップシンク対応
+                            ポリゴン数：37884 マテリアル数：17 ボーン数：224 リップシンク対応
                             セラミア・シスハート(メイド風ワンピ).vrm　Ver1.0.0
                             セラミア・シスハート(メイド風ワンピ_肌干渉部分削除).vrm　Ver1.0.0
-                            ポリゴン数：38304 マテリアル数：17 ボーン数：228 リップシンク対応
+                            ポリゴン数：36732 マテリアル数：16 ボーン数：224 リップシンク対応
                             &lt;内容物&gt; ・readme.txt ・001_VRM
                             　セラミア・シスハート(メイド風ワンピ).vrm
                             　セラミア・シスハート(メイド風ワンピ_肌干渉部分削除).vrm
@@ -511,8 +513,10 @@
                             　ニーソ.png 　ブーツ.png 　リボン(黒).png
                             　リボン(赤).png 　顔テクスチャ.png 　瞳.png 　肌.png
                             　肌_メイド風ワンピ用(干渉削除).png 　肌_私服用(干渉削除).png
-                            　髪.png 　 &lt;利用規約&gt;
-                            ・商用利用可(販売用のゲーム、動画、画像など営利目的での使用可)商用利用可ではございますがお声掛けくださいませ。ツイッター:@fox_kokona　URL:https://twitter.com/fox_kokona
+                            　髪.png ※VRoidStudio-v0.7.5-winで作成
+                            &lt;利用規約&gt;
+                            ・商用利用可(販売用のゲーム、動画、画像など営利目的での使用可)
+                            　(商用利用可ではございますがお声掛けくださいませ。ツイッター:@fox_kokona　URL:https://twitter.com/fox_kokona)
                             ・当データのみ又はパーツの一部を含んだ再配布及び販売禁止
                             ・データ改変可(ただし、製作者を騙る行為又は改変したデータの再配布及び販売禁止)
                             ・使用報告やクレジット表記は必要ありません(任意)
@@ -520,8 +524,8 @@
                             ・当データを使用していかなる損害が発生したとしても、当ショップはいかなる責任も負いません。
                             ・改変の有無にかかわらず作者の許可なく、人格を与えて活動することの禁止（VirtualYoutuber、VRChat等におけるロールプレイはこれに含まれません）
                             ・VRChatでの使用可(その際は、必ずprivateアバターとしてアップロードしてください)。
-                            ・各種プラットフォームての利用可 &lt;著作権について&gt;
-                            本データの著作権及び著作者人格権等のその他一切の権利は、製作者na-yaに帰属します。
+                            ・各種プラットフォームでの利用可 &lt;著作権について&gt;
+                            本素材データの著作権及び著作者人格権等のその他一切の権利は、製作者na-yaに帰属します。
                           </p>
                         </div>
                       </section>
