updated at: 2019-10-20 23:02, 【個人商用ライセンス版】ドロレス・レイズ - 黒柚式のソレ - BOOTH

--- a/VRChat/50/1157350.html
+++ b/VRChat/50/1157350.html
@@ -310,6 +310,15 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
+                            <iframe width="560" height="315" src=
+                            "https://www.youtube.com/embed/gE76PqI7r7Q"
+                            frameborder="0" allowfullscreen
+                            ></iframe>
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
                             <img alt="【個人商用ライセンス版】ドロレス・レイズ" class=
                             "market-item-detail-item-image" src=
                             "https://booth.pximg.net/5260429d-7507-47d3-9a6c-73fe7e29ce1a/i/1157350/a0802cb7-3826-423c-a0c5-f60ac0c7bb49_base_resized.jpg">
@@ -354,6 +363,9 @@
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
+                        <div class=
+                        "youtube-thumbnail slick-thumbnail-border">
+                        </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/5260429d-7507-47d3-9a6c-73fe7e29ce1a/i/1157350/a0802cb7-3826-423c-a0c5-f60ac0c7bb49_base_resized.jpg">
