updated at: 2019-10-21 02:01, 【無料】都合の良いおじいさん「つごおじ」3Dモデル - ミスイのグッズショップ - BOOTH

--- a/VRChat/44/1297944.html
+++ b/VRChat/44/1297944.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>
-      無料の都合の良いおじいさん「つごおじ」3Dモデル - ミスイのグッズショップ - BOOTH
+      【無料】都合の良いおじいさん「つごおじ」3Dモデル - ミスイのグッズショップ - BOOTH
     </title>
     <meta name="description" content=
-    "人数が足りないなぁって時に便利なVroid製クローンの都合の良いおじいさんモデル すらっとした足と高身長を活かして武器としても使いやすく。 一時間で作られた荒々しい仕上がり。関節は飛び服は破けます -------------------------------------- ☆バージョン2.0を追加いたしました 2.0はVRMモデルのみです。(リムライトを変更) -------------------------------------- △19968(Vroid表示) VRMモデルとおまけでPMXモデルが付属しています。">
+    "人数が足りないなぁって時に便利なVroid製クローンの都合の良いおじいさんモデル すらっとした足と高身長を活かして武器としても使いやすく。 1時間で作られた荒々しい仕上がり。関節は飛び服は破けます -------------------------------------- ☆バージョン2.0を追加いたしました 2.0はVRMモデルのみです。(リムライトを変更) -------------------------------------- △19968(Vroid表示) VRMモデルとおまけでPMXモデルが付属しています。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1297944">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "無料の都合の良いおじいさん「つごおじ」3Dモデル - ミスイのグッズショップ - BOOTH">
+    "【無料】都合の良いおじいさん「つごおじ」3Dモデル - ミスイのグッズショップ - BOOTH">
     <meta name="twitter:description" content=
-    "人数が足りないなぁって時に便利なVroid製クローンの都合の良いおじいさんモデル すらっとした足と高身長を活かして武器としても使いやすく。 一時間で作られた荒々しい仕上がり。関節は飛び服は破けます -------------------------------------- ☆バージョン2.0を追加いたしました 2.0はVRMモデルのみです。(リムライトを変更) -------------------------------------- △19968(Vroid表示) VRMモデルとおまけでPMXモデルが付属しています。">
+    "人数が足りないなぁって時に便利なVroid製クローンの都合の良いおじいさんモデル すらっとした足と高身長を活かして武器としても使いやすく。 1時間で作られた荒々しい仕上がり。関節は飛び服は破けます -------------------------------------- ☆バージョン2.0を追加いたしました 2.0はVRMモデルのみです。(リムライトを変更) -------------------------------------- △19968(Vroid表示) VRMモデルとおまけでPMXモデルが付属しています。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/9b100eac-a33c-4924-9906-fa7d502df195/i/1297944/b15ba5d5-9cdf-4d39-8261-e9fac7c3c544_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "無料の都合の良いおじいさん「つごおじ」3Dモデル - ミスイのグッズショップ - BOOTH">
+    "【無料】都合の良いおじいさん「つごおじ」3Dモデル - ミスイのグッズショップ - BOOTH">
     <meta property="og:description" content=
-    "人数が足りないなぁって時に便利なVroid製クローンの都合の良いおじいさんモデル すらっとした足と高身長を活かして武器としても使いやすく。 一時間で作られた荒々しい仕上がり。関節は飛び服は破けます -------------------------------------- ☆バージョン2.0を追加いたしました 2.0はVRMモデルのみです。(リムライトを変更) -------------------------------------- △19968(Vroid表示) VRMモデルとおまけでPMXモデルが付属しています。">
+    "人数が足りないなぁって時に便利なVroid製クローンの都合の良いおじいさんモデル すらっとした足と高身長を活かして武器としても使いやすく。 1時間で作られた荒々しい仕上がり。関節は飛び服は破けます -------------------------------------- ☆バージョン2.0を追加いたしました 2.0はVRMモデルのみです。(リムライトを変更) -------------------------------------- △19968(Vroid表示) VRMモデルとおまけでPMXモデルが付属しています。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/9b100eac-a33c-4924-9906-fa7d502df195/i/1297944/b15ba5d5-9cdf-4d39-8261-e9fac7c3c544_base_resized.jpg">
     <meta property="og:url" content=
@@ -131,7 +131,7 @@
                           </div></a>
                         </div>
                         <h2 class="item-summary__item-name">
-                          無料の都合の良いおじいさん「つごおじ」3Dモデル
+                          【無料】都合の良いおじいさん「つごおじ」3Dモデル
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -322,7 +322,7 @@
                             "https://booth.pm/ja/items/1297944"
                             data-lang="ja" data-hashtags="booth_pm"
                             data-text=
-                            "無料の都合の良いおじいさん「つごおじ」3Dモデル | ミスイのグッズショップ"
+                            "【無料】都合の良いおじいさん「つごおじ」3Dモデル | ミスイのグッズショップ"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
@@ -342,7 +342,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="無料の都合の良いおじいさん「つごおじ」3Dモデル"
+                            <img alt="【無料】都合の良いおじいさん「つごおじ」3Dモデル"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/9b100eac-a33c-4924-9906-fa7d502df195/i/1297944/b15ba5d5-9cdf-4d39-8261-e9fac7c3c544_base_resized.jpg">
@@ -351,7 +351,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="無料の都合の良いおじいさん「つごおじ」3Dモデル"
+                            <img alt="【無料】都合の良いおじいさん「つごおじ」3Dモデル"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/9b100eac-a33c-4924-9906-fa7d502df195/i/1297944/b1daecd6-2380-4951-ab77-54057107cdad_base_resized.jpg">
@@ -360,7 +360,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="無料の都合の良いおじいさん「つごおじ」3Dモデル"
+                            <img alt="【無料】都合の良いおじいさん「つごおじ」3Dモデル"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/9b100eac-a33c-4924-9906-fa7d502df195/i/1297944/b6139662-92fb-4b29-927e-8a2d214237a7_base_resized.jpg">
@@ -386,12 +386,12 @@
                         <div class=
                         "market-item-detail-description">
                           <h1 class="subhead">
-                            無料の都合の良いおじいさん「つごおじ」3Dモデル 紹介文
+                            【無料】都合の良いおじいさん「つごおじ」3Dモデル 紹介文
                           </h1>
                           <p class="autolink">
                             人数が足りないなぁって時に便利なVroid製クローンの都合の良いおじいさんモデル
                             すらっとした足と高身長を活かして武器としても使いやすく。
-                            一時間で作られた荒々しい仕上がり。関節は飛び服は破けます
+                            1時間で作られた荒々しい仕上がり。関節は飛び服は破けます
                             --------------------------------------
                             ☆バージョン2.0を追加いたしました
                             2.0はVRMモデルのみです。(リムライトを変更)
