updated at: 2019-10-21 16:26, 410 Gone[VRChat想定アバター/Quest対応/FBX] - 変化稲荷社 - BOOTH

--- a/VRChat/43/975243.html
+++ b/VRChat/43/975243.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      410 Gone[VRChat想定アバター/FBX] - 変化稲荷社 - BOOTH
+      410 Gone[VRChat想定アバター/Quest対応/FBX] - 変化稲荷社 - BOOTH
     </title>
     <meta name="description" content=
     "アバターアップロード解説動画→ https://www.youtube.com/watch?v=nqNmmMnv9bE 「410 Gone」はVRChatを想定した重機風のロボット3Dモデルです。VRChatの他にも映像制作・Vtuber・ゲーム制作など幅広く利用していただけます。そのままでも、好みに合わせて改変していただいても構いません。ただし当3Dモデルを再配布、また改変して再配布したい時は、Twitter@bbbbb_himikoまたはメールアドレスbbbbbhimiko(atmark)gmail.comにお問い合わせください。 ・更新履歴 2018/8/19 販売開始　バージョン1.0">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "410 Gone[VRChat想定アバター/FBX] - 変化稲荷社 - BOOTH">
+    "410 Gone[VRChat想定アバター/Quest対応/FBX] - 変化稲荷社 - BOOTH">
     <meta name="twitter:description" content=
     "アバターアップロード解説動画→ https://www.youtube.com/watch?v=nqNmmMnv9bE 「410 Gone」はVRChatを想定した重機風のロボット3Dモデルです。VRChatの他にも映像制作・Vtuber・ゲーム制作など幅広く利用していただけます。そのままでも、好みに合わせて改変していただいても構いません。ただし当3Dモデルを再配布、また改変して再配布したい時は、Twitter@bbbbb_himikoまたはメールアドレスbbbbbhimiko(atmark)gmail.comにお問い合わせください。 ・更新履歴 2018/8/19 販売開始　バージョン1.0">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/7667a7ab-8336-48fe-825d-514da9d0d34e/i/975243/fec7ecc1-bab4-4feb-b6d7-2b727a44d948_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "410 Gone[VRChat想定アバター/FBX] - 変化稲荷社 - BOOTH">
+    "410 Gone[VRChat想定アバター/Quest対応/FBX] - 変化稲荷社 - BOOTH">
     <meta property="og:description" content=
     "アバターアップロード解説動画→ https://www.youtube.com/watch?v=nqNmmMnv9bE 「410 Gone」はVRChatを想定した重機風のロボット3Dモデルです。VRChatの他にも映像制作・Vtuber・ゲーム制作など幅広く利用していただけます。そのままでも、好みに合わせて改変していただいても構いません。ただし当3Dモデルを再配布、また改変して再配布したい時は、Twitter@bbbbb_himikoまたはメールアドレスbbbbbhimiko(atmark)gmail.comにお問い合わせください。 ・更新履歴 2018/8/19 販売開始　バージョン1.0">
     <meta property="og:image" content=
@@ -131,7 +131,7 @@
                           </div></a>
                         </div>
                         <h2 class="item-summary__item-name">
-                          410 Gone[VRChat想定アバター/FBX]
+                          410 Gone[VRChat想定アバター/Quest対応/FBX]
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -225,7 +225,7 @@
                             "https://booth.pm/ja/items/975243"
                             data-lang="ja" data-hashtags="booth_pm"
                             data-text=
-                            "410 Gone[VRChat想定アバター/FBX] | 変化稲荷社"
+                            "410 Gone[VRChat想定アバター/Quest対応/FBX] | 変化稲荷社"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
@@ -245,7 +245,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="410 Gone[VRChat想定アバター/FBX]"
+                            <img alt=
+                            "410 Gone[VRChat想定アバター/Quest対応/FBX]"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/7667a7ab-8336-48fe-825d-514da9d0d34e/i/975243/fec7ecc1-bab4-4feb-b6d7-2b727a44d948_base_resized.jpg">
@@ -254,7 +255,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="410 Gone[VRChat想定アバター/FBX]"
+                            <img alt=
+                            "410 Gone[VRChat想定アバター/Quest対応/FBX]"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/7667a7ab-8336-48fe-825d-514da9d0d34e/i/975243/aec2e133-77f4-4e6b-83d9-4f2e5c4e066d_base_resized.jpg">
@@ -263,7 +265,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="410 Gone[VRChat想定アバター/FBX]"
+                            <img alt=
+                            "410 Gone[VRChat想定アバター/Quest対応/FBX]"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/7667a7ab-8336-48fe-825d-514da9d0d34e/i/975243/7504f14d-4a77-4011-83b4-4fd4b18e8fc9_base_resized.jpg">
@@ -272,7 +275,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="410 Gone[VRChat想定アバター/FBX]"
+                            <img alt=
+                            "410 Gone[VRChat想定アバター/Quest対応/FBX]"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/7667a7ab-8336-48fe-825d-514da9d0d34e/i/975243/0186ac2d-a411-4615-affa-970c3893abab_base_resized.jpg">
@@ -302,7 +306,7 @@
                         <div class=
                         "market-item-detail-description">
                           <h1 class="subhead">
-                            410 Gone[VRChat想定アバター/FBX] 紹介文
+                            410 Gone[VRChat想定アバター/Quest対応/FBX] 紹介文
                           </h1>
                           <p class="autolink">
                             アバターアップロード解説動画→
