--- a/VRChat/63/917063.html
+++ b/VRChat/63/917063.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>
-      [Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver1.0 - みさくらやさん - BOOTH
+      [Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver2.0 - みさくらやさん - BOOTH
     </title>
     <meta name="description" content=
-    "VRChat、バーチャルキャスト等でお使いいただけるVRアバター用3Dモデルです。 改変可、商業利用可能。 また、VRChatへの導入手順書を同封しています。 約20枚の画像を用いて分かりやすく解説。 VRChat初心者の方、遊んではいるけどアップロードはしたこと無い方等にお勧めです。 【各種説明】 ・△ポリゴン数48153(素体込み) ・マテリアル数4 ・テクスチャ：通常2枚 　　　　　　　ノーマル1枚 　　　　　　　マスク3枚 　　　　　　　エミッション1枚 　　　　　　　マットキャップ1枚 ・表情シェイプ64種類(左右分割含)、リップシンク用モーフ20種類搭載。">
+    "VRChat、バーチャルキャスト等でお使いいただけるVRアバター用3Dモデルです。 改変可、商業利用可能。 また、VRChatへの導入手順書を同封しています。 約20枚の画像を用いて分かりやすく解説。 VRChat初心者の方、遊んではいるけどアップロードはしたこと無い方等にお勧めです。 19/10/21　ハロウィンドレス追加しました。 【各種説明】 ・△ポリゴン数48153(素体込み) ・マテリアル数4 ・テクスチャ：通常2枚 　　　　　　　ノーマル1枚 　　　　　　　マスク3枚 　　　　　　　エミッション1枚 　　　　　　　マットキャップ1枚">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/917063">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver1.0 - みさくらやさん - BOOTH">
+    "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver2.0 - みさくらやさん - BOOTH">
     <meta name="twitter:description" content=
-    "VRChat、バーチャルキャスト等でお使いいただけるVRアバター用3Dモデルです。 改変可、商業利用可能。 また、VRChatへの導入手順書を同封しています。 約20枚の画像を用いて分かりやすく解説。 VRChat初心者の方、遊んではいるけどアップロードはしたこと無い方等にお勧めです。 【各種説明】 ・△ポリゴン数48153(素体込み) ・マテリアル数4 ・テクスチャ：通常2枚 　　　　　　　ノーマル1枚 　　　　　　　マスク3枚 　　　　　　　エミッション1枚 　　　　　　　マットキャップ1枚 ・表情シェイプ64種類(左右分割含)、リップシンク用モーフ20種類搭載。">
+    "VRChat、バーチャルキャスト等でお使いいただけるVRアバター用3Dモデルです。 改変可、商業利用可能。 また、VRChatへの導入手順書を同封しています。 約20枚の画像を用いて分かりやすく解説。 VRChat初心者の方、遊んではいるけどアップロードはしたこと無い方等にお勧めです。 19/10/21　ハロウィンドレス追加しました。 【各種説明】 ・△ポリゴン数48153(素体込み) ・マテリアル数4 ・テクスチャ：通常2枚 　　　　　　　ノーマル1枚 　　　　　　　マスク3枚 　　　　　　　エミッション1枚 　　　　　　　マットキャップ1枚">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e4469ac5-f585-4eb4-b6e6-90939e0e5a26/i/917063/ae23a30d-688f-4753-839c-807675949ecc_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver1.0 - みさくらやさん - BOOTH">
+    "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver2.0 - みさくらやさん - BOOTH">
     <meta property="og:description" content=
-    "VRChat、バーチャルキャスト等でお使いいただけるVRアバター用3Dモデルです。 改変可、商業利用可能。 また、VRChatへの導入手順書を同封しています。 約20枚の画像を用いて分かりやすく解説。 VRChat初心者の方、遊んではいるけどアップロードはしたこと無い方等にお勧めです。 【各種説明】 ・△ポリゴン数48153(素体込み) ・マテリアル数4 ・テクスチャ：通常2枚 　　　　　　　ノーマル1枚 　　　　　　　マスク3枚 　　　　　　　エミッション1枚 　　　　　　　マットキャップ1枚 ・表情シェイプ64種類(左右分割含)、リップシンク用モーフ20種類搭載。">
+    "VRChat、バーチャルキャスト等でお使いいただけるVRアバター用3Dモデルです。 改変可、商業利用可能。 また、VRChatへの導入手順書を同封しています。 約20枚の画像を用いて分かりやすく解説。 VRChat初心者の方、遊んではいるけどアップロードはしたこと無い方等にお勧めです。 19/10/21　ハロウィンドレス追加しました。 【各種説明】 ・△ポリゴン数48153(素体込み) ・マテリアル数4 ・テクスチャ：通常2枚 　　　　　　　ノーマル1枚 　　　　　　　マスク3枚 　　　　　　　エミッション1枚 　　　　　　　マットキャップ1枚">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/e4469ac5-f585-4eb4-b6e6-90939e0e5a26/i/917063/ae23a30d-688f-4753-839c-807675949ecc_base_resized.jpg">
     <meta property="og:url" content=
@@ -132,7 +132,7 @@
                           </div></a>
                         </div>
                         <h2 class="item-summary__item-name">
-                          [Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver1.0
+                          [Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver2.0
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -226,7 +226,7 @@
                             "https://booth.pm/ja/items/917063"
                             data-lang="ja" data-hashtags="booth_pm"
                             data-text=
-                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver1.0 | みさくらやさん"
+                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver2.0 | みさくらやさん"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
@@ -247,7 +247,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver1.0"
+                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver2.0"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/e4469ac5-f585-4eb4-b6e6-90939e0e5a26/i/917063/ae23a30d-688f-4753-839c-807675949ecc_base_resized.jpg">
@@ -257,7 +257,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver1.0"
+                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver2.0"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/e4469ac5-f585-4eb4-b6e6-90939e0e5a26/i/917063/2a8970fa-e57e-4a09-8154-1104143bf171_base_resized.jpg">
@@ -267,7 +267,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver1.0"
+                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver2.0"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/e4469ac5-f585-4eb4-b6e6-90939e0e5a26/i/917063/8cee5912-aa1f-41aa-baff-54f9996a963b_base_resized.jpg">
@@ -277,7 +277,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver1.0"
+                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver2.0"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/e4469ac5-f585-4eb4-b6e6-90939e0e5a26/i/917063/3b00f24b-7539-4cae-a5d2-40c5af74511c_base_resized.jpg">
@@ -287,7 +287,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver1.0"
+                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver2.0"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/e4469ac5-f585-4eb4-b6e6-90939e0e5a26/i/917063/e6aac044-2bc2-4ddd-9857-d0665f7b6809_base_resized.jpg">
@@ -297,7 +297,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver1.0"
+                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver2.0"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/e4469ac5-f585-4eb4-b6e6-90939e0e5a26/i/917063/f91e9d26-69ae-40e8-a1da-0bf1c7f6a53d_base_resized.jpg">
@@ -307,7 +307,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver1.0"
+                            "[Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver2.0"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/e4469ac5-f585-4eb4-b6e6-90939e0e5a26/i/917063/2e217754-bdde-4d0c-97d1-a3d9f368230f_base_resized.jpg">
@@ -349,7 +349,7 @@
                         <div class=
                         "market-item-detail-description">
                           <h1 class="subhead">
-                            [Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver1.0
+                            [Unity:Humanoidリグ対応オリジナル3Dモデル]メルティ　Ver2.0
                             紹介文
                           </h1>
                           <p class="autolink">
@@ -357,8 +357,9 @@
                             改変可、商業利用可能。 また、VRChatへの導入手順書を同封しています。
                             約20枚の画像を用いて分かりやすく解説。
                             VRChat初心者の方、遊んではいるけどアップロードはしたこと無い方等にお勧めです。
-                            【各種説明】 ・△ポリゴン数48153(素体込み) ・マテリアル数4
-                            ・テクスチャ：通常2枚 　　　　　　　ノーマル1枚 　　　　　　　マスク3枚
+                            19/10/21　ハロウィンドレス追加しました。 【各種説明】
+                            ・△ポリゴン数48153(素体込み) ・マテリアル数4 ・テクスチャ：通常2枚
+                            　　　　　　　ノーマル1枚 　　　　　　　マスク3枚
                             　　　　　　　エミッション1枚 　　　　　　　マットキャップ1枚
                             ・表情シェイプ64種類(左右分割含)、リップシンク用モーフ20種類搭載。
                             ・ユニティちゃんトゥーンシェーダー2.0.7.5を導入しています。他のシェーダーをお使いの場合は別途ご用意ください。
@@ -395,15 +396,15 @@
                             ・同梱モデルデータ一覧：unitypackage、FBX、VRM、blend
                             ・同梱テクスチャデータ一覧：PNG、clip、psd ・同梱マニュアル一覧：1
                             導入手順、2 アニメーション、3　UTS2覚書 ----------
-                            メルティver1.0およびあまロリヴァンプver3.1　利用規約
+                            メルティver2.0およびあまロリヴァンプver3.1　利用規約
                             第1条（定義） 　本規約で使用する用語の定義は次に掲げる通りとします。
                             （１）本モデル：3Dモデル「メルティ
-                            Ver1.0」「あまロリヴァンプver3.1」内容物である3Dモデル本体
+                            Ver2.0」「あまロリヴァンプver3.1」内容物である3Dモデル本体
                             （２）購入者：3Dモデル「メルティ
-                            Ver1.0」「あまロリヴァンプver3.1」を購入した者
+                            Ver2.0」「あまロリヴァンプver3.1」を購入した者
                             （３）作者：御桜　twitterID @kagarizaki
                             （４）本モデル内容物：3Dモデル「メルティ
-                            Ver1.0」「あまロリヴァンプver3.1」を購入した際、購入物に含まれていた全てのデータ
+                            Ver2.0」「あまロリヴァンプver3.1」を購入した際、購入物に含まれていた全てのデータ
                             第2条（同意の成立）
                             購入者は本モデルを利用することによって、本規約の内容に全て同意したものとみなします。
                             第3条（著作権法その他適用法との関係）
@@ -438,12 +439,13 @@
                             Technologies
                             Japan様製のユニティちゃんトゥーンシェーダー2.0.4を使用している為
                             　　　 ユニティちゃんライセンスを継承しています。 　　　
-                            ご利用に際しましては各人ご留意の上ご利用ください。 変更履歴 verRE　
-                            バージョン数字更新のみ
+                            ご利用に際しましては各人ご留意の上ご利用ください。 変更履歴
+                            verRE2.0　 バージョン数字更新のみ
                             ver1.03　第4条に「４　作者からVRMファイルの定義する「明確に許可された人」の権利を付与され、その権利を行使すること。」を追加。
                             ver1.02　第5条第1項に「第三者が本モデル内容物を利用可能な状態にする行為」を追加。
                             c Unity Technologies Japan/UCL 修正履歴
-                            verRE　リメイクバージョン「メルティ」を追加 ver3.1　
+                            verRE2.0　 メルティにハロウィンドレスを追加。
+                            verRE　　　リメイクバージョン「メルティ」を追加 ver3.1　
                             最初期3DモデルをVRCランク[Medium]に軽量化、Unity2017.4.15f1に対応、シェーダーをUTS2.0.5に更新（別DLファイルとしてアップロード)
                             ver3.0　 おでかけハロウィンドレスを追加
                             ver2.02　肉球ハンドのウェイト、髪ダイナミックボーン等の微修正
