--- a/VRChat/85/1319185.html
+++ b/VRChat/85/1319185.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      Punishment - Gottes Melodie EP - MUHAREM Corporation - BOOTH
+      Punishment - Gottes Melodie EP - GIDEON/MUHAREM - BOOTH
     </title>
     <meta name="description" content=
     "VRchatのコミュニティで色々触発されて作った曲のデモです。 1.Punishment 2.Gottes Melodie ・個人的な範囲を超える目的で使用することを禁止します。 ・再配布、ネットなどを通じてこの楽曲を送信できる状態にすることを禁止します。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "Punishment - Gottes Melodie EP - MUHAREM Corporation - BOOTH">
+    "Punishment - Gottes Melodie EP - GIDEON/MUHAREM - BOOTH">
     <meta name="twitter:description" content=
     "VRchatのコミュニティで色々触発されて作った曲のデモです。 1.Punishment 2.Gottes Melodie ・個人的な範囲を超える目的で使用することを禁止します。 ・再配布、ネットなどを通じてこの楽曲を送信できる状態にすることを禁止します。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/37b5cb30-6505-46fd-809a-bcaa84b3f8ab/i/1319185/ccde65f4-9827-4e61-9f1f-c87db96cb881_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "Punishment - Gottes Melodie EP - MUHAREM Corporation - BOOTH">
+    "Punishment - Gottes Melodie EP - GIDEON/MUHAREM - BOOTH">
     <meta property="og:description" content=
     "VRchatのコミュニティで色々触発されて作った曲のデモです。 1.Punishment 2.Gottes Melodie ・個人的な範囲を超える目的で使用することを禁止します。 ・再配布、ネットなどを通じてこの楽曲を送信できる状態にすることを禁止します。">
     <meta property="og:image" content=
@@ -120,12 +120,12 @@
                           href="https://satius.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="MUHAREM Corporation" class=
+                            <img alt="GIDEON/MUHAREM " class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/3589959/icon_image/e1078d87-4c7c-49e7-99b6-06e88b815edd_base_resized.jpg">
                             <div class=
                             "flex-order-summary-shop_name">
-                              MUHAREM Corporation
+                              GIDEON/MUHAREM
                             </div>
                           </div></a>
                         </div>
@@ -227,7 +227,7 @@
                             "https://booth.pm/ja/items/1319185"
                             data-lang="ja" data-hashtags="booth_pm"
                             data-text=
-                            "Punishment - Gottes Melodie EP | MUHAREM Corporation"
+                            "Punishment - Gottes Melodie EP | GIDEON/MUHAREM"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
