--- a/VRChat/46/1314546.html
+++ b/VRChat/46/1314546.html
@@ -6,7 +6,7 @@
       3Dオリジナルモデル - アングラの子 - 電脳屋(NEKOMI). - BOOTH
     </title>
     <meta name="description" content=
-    "VRChatでの利用を想定したキャラクターモデル、アングラの子です。ambrへの対応も予定 その他アプリケーション、ゲーム、動画配信等でもご利用頂けます。 ・\5000　：ローポリ版 約4000ポリゴン版のモデルです。OqurusQuest対応 ・\8000　：ハイポリ版 約40000ポリゴン版のモデルです。 Ver1.3、Ver1.5、Ver2.0がダウンロード可能です。 ・\12000 ：クロスグレード版 両方のモデルがダウンロード可能です。 アップデート　ローポリ版 ----：1.0.2：テクスチャ一部修正 ----：1.0.3：テクスチャ修正">
+    "VRChatでの利用を想定したキャラクターモデル、アングラの子です。 ローポリ版はambrへの対応も予定 その他アプリケーション、ゲーム、動画配信等でもご利用頂けます。 ・\5000　：ローポリ版 約4000ポリゴン版のモデルです。OqurusQuest対応 ・\8000　：ハイポリ版 約40000ポリゴン版のモデルです。 Ver1.3、Ver1.5、Ver2.0がダウンロード可能です。 ・\12000 ：クロスグレード版 両方のモデルがダウンロード可能です。 アップデート　ローポリ版 ----：1.0.2：テクスチャ一部修正 ----：1.0.3：テクスチャ修正">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1314546">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "3Dオリジナルモデル - アングラの子 - 電脳屋(NEKOMI). - BOOTH">
     <meta name="twitter:description" content=
-    "VRChatでの利用を想定したキャラクターモデル、アングラの子です。ambrへの対応も予定 その他アプリケーション、ゲーム、動画配信等でもご利用頂けます。 ・\5000　：ローポリ版 約4000ポリゴン版のモデルです。OqurusQuest対応 ・\8000　：ハイポリ版 約40000ポリゴン版のモデルです。 Ver1.3、Ver1.5、Ver2.0がダウンロード可能です。 ・\12000 ：クロスグレード版 両方のモデルがダウンロード可能です。 アップデート　ローポリ版 ----：1.0.2：テクスチャ一部修正 ----：1.0.3：テクスチャ修正">
+    "VRChatでの利用を想定したキャラクターモデル、アングラの子です。 ローポリ版はambrへの対応も予定 その他アプリケーション、ゲーム、動画配信等でもご利用頂けます。 ・\5000　：ローポリ版 約4000ポリゴン版のモデルです。OqurusQuest対応 ・\8000　：ハイポリ版 約40000ポリゴン版のモデルです。 Ver1.3、Ver1.5、Ver2.0がダウンロード可能です。 ・\12000 ：クロスグレード版 両方のモデルがダウンロード可能です。 アップデート　ローポリ版 ----：1.0.2：テクスチャ一部修正 ----：1.0.3：テクスチャ修正">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/3923a6a5-7600-4cc2-9240-d92591e77ceb/i/1314546/f591ade5-84fc-4918-8b90-f890cbfcef5d_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "3Dオリジナルモデル - アングラの子 - 電脳屋(NEKOMI). - BOOTH">
     <meta property="og:description" content=
-    "VRChatでの利用を想定したキャラクターモデル、アングラの子です。ambrへの対応も予定 その他アプリケーション、ゲーム、動画配信等でもご利用頂けます。 ・\5000　：ローポリ版 約4000ポリゴン版のモデルです。OqurusQuest対応 ・\8000　：ハイポリ版 約40000ポリゴン版のモデルです。 Ver1.3、Ver1.5、Ver2.0がダウンロード可能です。 ・\12000 ：クロスグレード版 両方のモデルがダウンロード可能です。 アップデート　ローポリ版 ----：1.0.2：テクスチャ一部修正 ----：1.0.3：テクスチャ修正">
+    "VRChatでの利用を想定したキャラクターモデル、アングラの子です。 ローポリ版はambrへの対応も予定 その他アプリケーション、ゲーム、動画配信等でもご利用頂けます。 ・\5000　：ローポリ版 約4000ポリゴン版のモデルです。OqurusQuest対応 ・\8000　：ハイポリ版 約40000ポリゴン版のモデルです。 Ver1.3、Ver1.5、Ver2.0がダウンロード可能です。 ・\12000 ：クロスグレード版 両方のモデルがダウンロード可能です。 アップデート　ローポリ版 ----：1.0.2：テクスチャ一部修正 ----：1.0.3：テクスチャ修正">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/3923a6a5-7600-4cc2-9240-d92591e77ceb/i/1314546/f591ade5-84fc-4918-8b90-f890cbfcef5d_base_resized.jpg">
     <meta property="og:url" content=
@@ -512,7 +512,8 @@
                             3Dオリジナルモデル - アングラの子 紹介文
                           </h1>
                           <p class="autolink">
-                            VRChatでの利用を想定したキャラクターモデル、アングラの子です。ambrへの対応も予定
+                            VRChatでの利用を想定したキャラクターモデル、アングラの子です。
+                            ローポリ版はambrへの対応も予定
                             その他アプリケーション、ゲーム、動画配信等でもご利用頂けます。
                             ・\5000　：ローポリ版
                             約4000ポリゴン版のモデルです。OqurusQuest対応
