--- a/VRChat/86/1313386.html
+++ b/VRChat/86/1313386.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      ろーぽりわかなちゃん[VRChat想定アバター/FBX] - 変化稲荷社 - BOOTH
+      ろーぽりわかなちゃん[VRChat想定アバター/Quest対応/FBX] - 変化稲荷社 - BOOTH
     </title>
     <meta name="description" content=
     "VRChat OculusQuest対応記念！ 「ろーぽりわかなちゃん」はポリゴン少なめのアバターです！負荷を軽くしてVRChatを遊びたい！という場合に最適、手指や表情までしっかり実装してます！ アバターアップロード解説動画→ https://www.youtube.com/watch?v=nqNmmMnv9bE">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "ろーぽりわかなちゃん[VRChat想定アバター/FBX] - 変化稲荷社 - BOOTH">
+    "ろーぽりわかなちゃん[VRChat想定アバター/Quest対応/FBX] - 変化稲荷社 - BOOTH">
     <meta name="twitter:description" content=
     "VRChat OculusQuest対応記念！ 「ろーぽりわかなちゃん」はポリゴン少なめのアバターです！負荷を軽くしてVRChatを遊びたい！という場合に最適、手指や表情までしっかり実装してます！ アバターアップロード解説動画→ https://www.youtube.com/watch?v=nqNmmMnv9bE">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/7667a7ab-8336-48fe-825d-514da9d0d34e/i/1313386/48397473-e8f9-4448-a0cb-7ce3063b1fca_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "ろーぽりわかなちゃん[VRChat想定アバター/FBX] - 変化稲荷社 - BOOTH">
+    "ろーぽりわかなちゃん[VRChat想定アバター/Quest対応/FBX] - 変化稲荷社 - BOOTH">
     <meta property="og:description" content=
     "VRChat OculusQuest対応記念！ 「ろーぽりわかなちゃん」はポリゴン少なめのアバターです！負荷を軽くしてVRChatを遊びたい！という場合に最適、手指や表情までしっかり実装してます！ アバターアップロード解説動画→ https://www.youtube.com/watch?v=nqNmmMnv9bE">
     <meta property="og:image" content=
@@ -131,7 +131,7 @@
                           </div></a>
                         </div>
                         <h2 class="item-summary__item-name">
-                          ろーぽりわかなちゃん[VRChat想定アバター/FBX]
+                          ろーぽりわかなちゃん[VRChat想定アバター/Quest対応/FBX]
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -275,7 +275,7 @@
                             "https://booth.pm/ja/items/1313386"
                             data-lang="ja" data-hashtags="booth_pm"
                             data-text=
-                            "ろーぽりわかなちゃん[VRChat想定アバター/FBX] | 変化稲荷社"
+                            "ろーぽりわかなちゃん[VRChat想定アバター/Quest対応/FBX] | 変化稲荷社"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
@@ -295,7 +295,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="ろーぽりわかなちゃん[VRChat想定アバター/FBX]"
+                            <img alt=
+                            "ろーぽりわかなちゃん[VRChat想定アバター/Quest対応/FBX]"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/7667a7ab-8336-48fe-825d-514da9d0d34e/i/1313386/48397473-e8f9-4448-a0cb-7ce3063b1fca_base_resized.jpg">
@@ -304,7 +305,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="ろーぽりわかなちゃん[VRChat想定アバター/FBX]"
+                            <img alt=
+                            "ろーぽりわかなちゃん[VRChat想定アバター/Quest対応/FBX]"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/7667a7ab-8336-48fe-825d-514da9d0d34e/i/1313386/be109ffd-778f-4246-912e-093e13f71ab7_base_resized.jpg">
@@ -326,7 +328,8 @@
                         <div class=
                         "market-item-detail-description">
                           <h1 class="subhead">
-                            ろーぽりわかなちゃん[VRChat想定アバター/FBX] 紹介文
+                            ろーぽりわかなちゃん[VRChat想定アバター/Quest対応/FBX]
+                            紹介文
                           </h1>
                           <p class="autolink">
                             VRChat OculusQuest対応記念！
