updated at: 2019-10-21 19:31, 【3Dモデル】ベルト付きポーチ - りうしるハウス - BOOTH

--- a/VRChat/09/1272709.html
+++ b/VRChat/09/1272709.html
@@ -3,27 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>
-      ベルト付きポーチ - りうしるハウス - BOOTH
+      【3Dモデル】ベルト付きポーチ - りうしるハウス - BOOTH
     </title>
     <meta name="description" content=
-    "2618ポリゴンのサッシュのようなベルトポーチです。斜め、真横の2パターンがあります。 また、垂れてる革を外した2410ポリゴンのバージョンもそれぞれあります。 UnityPackageをインポートして、いずれかのFBXをSpineかHipsの良さそうな方に入れて、位置を調整すると使えます。 ポーチと垂れている革両方にボーンが入っているため、Dynamic Boneで揺らしたり、太ももに食い込まないようにできます。 改変用のpsdファイルも同梱しております。">
+    "2618ポリゴンのサッシュのようなベルトポーチです。 シェイプキーを用いて斜めにしたり革を外したり、体に合わせやすいよう変形したりできます。 UnityPackageをインポートして、FBXをSpineかHipsの良さそうな方に入れて、トランスフォームやシェイプキーを調整すると使えます。 ポーチと垂れている革両方にボーンが入っているため、Dynamic Boneで揺らしたり、太ももに食い込まないようにできます。 ただし、仕様上シェイプキーを使用した際はポーチのボーンがうまく動かない可能性が高いです。ご了承ください。 改変用のpsdファイルも同梱しております。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1272709">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "ベルト付きポーチ - りうしるハウス - BOOTH">
+    "【3Dモデル】ベルト付きポーチ - りうしるハウス - BOOTH">
     <meta name="twitter:description" content=
-    "2618ポリゴンのサッシュのようなベルトポーチです。斜め、真横の2パターンがあります。 また、垂れてる革を外した2410ポリゴンのバージョンもそれぞれあります。 UnityPackageをインポートして、いずれかのFBXをSpineかHipsの良さそうな方に入れて、位置を調整すると使えます。 ポーチと垂れている革両方にボーンが入っているため、Dynamic Boneで揺らしたり、太ももに食い込まないようにできます。 改変用のpsdファイルも同梱しております。">
+    "2618ポリゴンのサッシュのようなベルトポーチです。 シェイプキーを用いて斜めにしたり革を外したり、体に合わせやすいよう変形したりできます。 UnityPackageをインポートして、FBXをSpineかHipsの良さそうな方に入れて、トランスフォームやシェイプキーを調整すると使えます。 ポーチと垂れている革両方にボーンが入っているため、Dynamic Boneで揺らしたり、太ももに食い込まないようにできます。 ただし、仕様上シェイプキーを使用した際はポーチのボーンがうまく動かない可能性が高いです。ご了承ください。 改変用のpsdファイルも同梱しております。">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1272709/fcbfc6b3-b8e6-418e-8488-4e2e9973cffe_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1272709/91332f3e-ba01-4965-a375-da1f01859ff5_base_resized.jpg">
     <meta property="og:type" content="product">
-    <meta property="og:title" content="ベルト付きポーチ - りうしるハウス - BOOTH">
+    <meta property="og:title" content=
+    "【3Dモデル】ベルト付きポーチ - りうしるハウス - BOOTH">
     <meta property="og:description" content=
-    "2618ポリゴンのサッシュのようなベルトポーチです。斜め、真横の2パターンがあります。 また、垂れてる革を外した2410ポリゴンのバージョンもそれぞれあります。 UnityPackageをインポートして、いずれかのFBXをSpineかHipsの良さそうな方に入れて、位置を調整すると使えます。 ポーチと垂れている革両方にボーンが入っているため、Dynamic Boneで揺らしたり、太ももに食い込まないようにできます。 改変用のpsdファイルも同梱しております。">
+    "2618ポリゴンのサッシュのようなベルトポーチです。 シェイプキーを用いて斜めにしたり革を外したり、体に合わせやすいよう変形したりできます。 UnityPackageをインポートして、FBXをSpineかHipsの良さそうな方に入れて、トランスフォームやシェイプキーを調整すると使えます。 ポーチと垂れている革両方にボーンが入っているため、Dynamic Boneで揺らしたり、太ももに食い込まないようにできます。 ただし、仕様上シェイプキーを使用した際はポーチのボーンがうまく動かない可能性が高いです。ご了承ください。 改変用のpsdファイルも同梱しております。">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1272709/fcbfc6b3-b8e6-418e-8488-4e2e9973cffe_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1272709/91332f3e-ba01-4965-a375-da1f01859ff5_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1272709">
     <meta name="ga:shop" content="UA-136299327-1">
@@ -131,7 +132,7 @@
                           </div></a>
                         </div>
                         <h2 class="item-summary__item-name">
-                          ベルト付きポーチ
+                          【3Dモデル】ベルト付きポーチ
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -222,7 +223,7 @@
                             <a data-url=
                             "https://booth.pm/ja/items/1272709"
                             data-lang="ja" data-hashtags="booth_pm"
-                            data-text="ベルト付きポーチ | りうしるハウス"
+                            data-text="【3Dモデル】ベルト付きポーチ | りうしるハウス"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
@@ -242,27 +243,18 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="ベルト付きポーチ" class=
+                            <img alt="【3Dモデル】ベルト付きポーチ" class=
                             "market-item-detail-item-image" src=
-                            "https://booth.pximg.net/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1272709/fcbfc6b3-b8e6-418e-8488-4e2e9973cffe_base_resized.jpg">
+                            "https://booth.pximg.net/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1272709/91332f3e-ba01-4965-a375-da1f01859ff5_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="ベルト付きポーチ" class=
+                            <img alt="【3Dモデル】ベルト付きポーチ" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1272709/c123a94c-d69f-409c-86f7-20ca9b1b4223_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="ベルト付きポーチ" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1272709/37ea5d56-e677-416c-968a-302377697f64_base_resized.jpg">
+                            "https://booth.pximg.net/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1272709/5bebf362-10d8-4167-872d-c7a7d68abd73_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -270,29 +262,26 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1272709/fcbfc6b3-b8e6-418e-8488-4e2e9973cffe_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1272709/91332f3e-ba01-4965-a375-da1f01859ff5_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1272709/c123a94c-d69f-409c-86f7-20ca9b1b4223_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1272709/37ea5d56-e677-416c-968a-302377697f64_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1272709/5bebf362-10d8-4167-872d-c7a7d68abd73_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
                         <div class=
                         "market-item-detail-description">
                           <h1 class="subhead">
-                            ベルト付きポーチ 紹介文
+                            【3Dモデル】ベルト付きポーチ 紹介文
                           </h1>
                           <p class="autolink">
-                            2618ポリゴンのサッシュのようなベルトポーチです。斜め、真横の2パターンがあります。
-                            また、垂れてる革を外した2410ポリゴンのバージョンもそれぞれあります。
-                            UnityPackageをインポートして、いずれかのFBXをSpineかHipsの良さそうな方に入れて、位置を調整すると使えます。
+                            2618ポリゴンのサッシュのようなベルトポーチです。
+                            シェイプキーを用いて斜めにしたり革を外したり、体に合わせやすいよう変形したりできます。
+                            UnityPackageをインポートして、FBXをSpineかHipsの良さそうな方に入れて、トランスフォームやシェイプキーを調整すると使えます。
                             ポーチと垂れている革両方にボーンが入っているため、Dynamic
                             Boneで揺らしたり、太ももに食い込まないようにできます。
+                            ただし、仕様上シェイプキーを使用した際はポーチのボーンがうまく動かない可能性が高いです。ご了承ください。
                             改変用のpsdファイルも同梱しております。
                           </p>
                         </div>
